<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:backgroundTint="@color/colorPrimary"
    tools:context=".IniciarSesionActivity">

    <EditText
        android:id="@+id/EEmail"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/input_outline_white"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="5sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EPassword"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:padding="5sp"
        android:background="@drawable/input_outline_white"
        android:hint="@string/Password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EEmail" />

    <Button
        android:id="@+id/BIniciarSesion"
        android:layout_width="140sp"
        android:layout_height="40sp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="108dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/input_outline_white"
        android:padding="5sp"
        android:text="@string/Iniciar"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EPassword"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/BCerrarSesion"
        android:layout_width="140sp"
        android:layout_height="40sp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="108dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/input_outline_white"
        android:padding="5sp"
        android:text="@string/CerrarSesion"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EPassword"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>