<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/MyCardViewStyle"
    android:layout_marginBottom="2sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Title"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginStart="5sp"
                android:layout_marginEnd="5sp"
                android:layout_marginBottom="2sp"
                android:padding="2sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TTitle"
                android:hint="@string/Title"
                android:textColorHint="@color/white"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginEnd="5sp"
                android:layout_marginBottom="2sp"
                android:padding="2sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Year"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginStart="5sp"
                android:layout_marginEnd="5sp"
                android:layout_marginBottom="2sp"
                android:padding="2sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TYear"
                android:hint="@string/Year"
                android:textColorHint="@color/white"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginEnd="5sp"
                android:layout_marginBottom="2sp"
                android:padding="2sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Author"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginStart="5sp"
                android:layout_marginEnd="5sp"
                android:layout_marginBottom="2sp"
                android:padding="2sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TAuthor"
                android:hint="@string/Author"
                android:textColorHint="@color/white"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginEnd="5sp"
                android:layout_marginBottom="2sp"
                android:padding="2sp"/>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>